fix resource listing h2 bug by convertin to a and spacing fix

--- a/susa_website/static/css/resources.css
+++ b/susa_website/static/css/resources.css
@@ -26,6 +26,7 @@ File: "/resources/index.php"
     border-left: #EEEEEE solid 4px;
     padding: 0;
     transition: max-height .5s ease-out, padding .5s ease-out;
+    top: .2em;
 }
 
 .link-container>* {
@@ -54,6 +55,15 @@ File: "/resources/index.php"
     outline: 0;
 }
 
-h3 {
-    margin-bottom: .25em;
+.category-label {
+    font-size: 1.1em;
+    transition: color .15s ease-out;
+}
+
+.category-label:hover {
+    color: #ED4E33;
+}
+
+.category:not(:last-child) {
+    margin-bottom: .5em;
 }
